proj1/tests/error/raw_long_string_single_quote.py
R'''jfeoiwjfowi'fewf'we'fwe'f'wef'wef'wefw'ef'w'